k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
spec:
  rules:
    - host: "kmacher.cis188.org"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
  tls:
    - hosts:
        - "kmacher.cis188.org"
      secretName: kmacher-cis188-org-tls
